--- a/prod.config.json
+++ b/prod.config.json
@@ -13,7 +13,16 @@
         },
         "enabled": false
     },
-    "connectionString": { "name": "fs" },
+    "connectionString": { 
+        "name": "mssql",
+        "user": "jsreport",
+        "password": "Password1*",
+        "server": "jsreport-test.database.windows.net",
+        "database": "jsreport-test",
+		"options": {
+			"encrypt": true
+		}		
+    },
     "httpPort": 5488,
     "httpsPort": null,
     "blobStorage": "fileSystem",
