test multiple images

--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:4.4
+FROM node:6.9
 MAINTAINER Jan Blaha
 EXPOSE 5488
 
 RUN apt-get update && apt-get install -y sudo
+RUN apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb xfonts-75dpi xfonts-base
 RUN npm install npm -g
 RUN adduser --disabled-password --gecos "" jsreport
 RUN echo "jsreport ALL=(root) NOPASSWD: /usr/local/bin/node" >> /etc/sudoers
@@ -15,7 +16,6 @@ WORKDIR /app
 ADD run.sh /app/run.sh
 
 RUN sudo npm install jsreport --production
-RUN sudo npm install jsreport-mssql-store --production
 RUN sudo node node_modules/jsreport --init
 
 RUN sudo npm install jsreport-ejs --production --save --save-exact
@@ -23,11 +23,15 @@ RUN sudo npm install jsreport-jade --production --save --save-exact
 RUN sudo npm install jsreport-freeze --production --save --save-exact
 RUN sudo npm install jsreport-phantom-image --production --save --save-exact
 
-RUN sudo apt-get install -y xfonts-75dpi
-RUN sudo apt-get install -y xfonts-base
+RUN sudo npm install jsreport-mssql-store --production --save --save-exact
+RUN sudo npm install jsreport-postgres-store --production --save --save-exact
+RUN sudo npm install jsreport-mongodb-store --production --save --save-exact
+
 RUN sudo wget http://download.gna.org/wkhtmltopdf/0.12/0.12.2.1/wkhtmltox-0.12.2.1_linux-jessie-amd64.deb
 RUN sudo dpkg -i wkhtmltox-0.12.2.1_linux-jessie-amd64.deb
 RUN sudo npm install jsreport-wkhtmltopdf --production --save --save-exact
+
+RUN sudo npm install jsreport-electron-pdf --production --save --save-exact
 
 ENV NODE_ENV production
 
