try cmd electron

--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -36,3 +36,4 @@ RUN sudo npm install jsreport-electron-pdf --production --save --save-exact
 ENV NODE_ENV production
 
 CMD ["bash", "/app/run.sh"]
+CMD Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 & export DISPLAY=:99.0 && node "/app/server.js"
