--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -1,9 +1,10 @@
-FROM node:6.9
+FROM ubuntu:yakkety
 MAINTAINER Jan Blaha
 EXPOSE 5488
 
-RUN apt-get update && apt-get install -y sudo
-RUN apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb xfonts-75dpi xfonts-base
+RUN apt-get update && apt-get install -y curl sudo && \
+    curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - && \
+    apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb
 
 WORKDIR /app
 
@@ -18,9 +19,6 @@ RUN sudo npm install jsreport-phantom-image --production --save --save-exact
 RUN sudo npm install jsreport-mssql-store --production --save --save-exact
 RUN sudo npm install jsreport-postgres-store --production --save --save-exact
 RUN sudo npm install jsreport-mongodb-store --production --save --save-exact
-
-RUN sudo wget http://download.gna.org/wkhtmltopdf/0.12/0.12.2.1/wkhtmltox-0.12.2.1_linux-jessie-amd64.deb
-RUN sudo dpkg -i wkhtmltox-0.12.2.1_linux-jessie-amd64.deb
 RUN sudo npm install jsreport-wkhtmltopdf --production --save --save-exact
 
 RUN sudo npm install electron --production --save --save-exact
