--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -6,7 +6,8 @@ RUN apt-get update && apt-get install -y curl sudo && \
     curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - && \
     apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb
 
-WORKDIR /app
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
 RUN sudo npm install jsreport --production
 RUN sudo node node_modules/jsreport --init
@@ -21,9 +22,9 @@ RUN sudo npm install jsreport-postgres-store --production --save --save-exact
 RUN sudo npm install jsreport-mongodb-store --production --save --save-exact
 RUN sudo npm install jsreport-wkhtmltopdf --production --save --save-exact
 
-RUN sudo npm install electron --production --save --save-exact
+RUN sudo npm install electron-prebuilt@1.4.8 --production --save --save-exact
 RUN sudo npm install jsreport-electron-pdf --production --save --save-exact
 
 ENV NODE_ENV production
 
-CMD Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 & export DISPLAY=:99.0 && node "/app/server.js"
+CMD Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 & export DISPLAY=:99.0 && node server.js
