--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 5488
 
 RUN apt-get update && apt-get install -y curl sudo && \
     curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - && \
-    apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb
+    apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb xfonts-75dpi xfonts-base
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
@@ -31,6 +31,8 @@ RUN sudo npm install jsreport-electron-pdf --production --save --save-exact
 COPY . /usr/src/app
 
 ENV NODE_ENV production
-ENV DEBUG *
+ENV electron:strategy electron-ipc
+ENV phantom:strategy phantom-server
+ENV tasks:strategy http-server
 
 CMD ["bash", "/usr/src/app/run.sh"]
