--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -1,34 +1,24 @@
-FROM node:6.9
+FROM ubuntu:yakkety
 MAINTAINER Jan Blaha
 EXPOSE 5488
 
-RUN apt-get update && apt-get install -y sudo && \
+RUN apt-get update && apt-get install -y curl sudo && \
+    curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash - && \
     apt-get install -y nodejs libgtk2.0-dev libxtst-dev libxss1 libgconf2-dev libnss3-dev libasound2-dev xvfb xfonts-75dpi xfonts-base
+
+VOLUME ["/jsreport"]
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-ADD run.sh /usr/src/app/run.sh
-
 RUN sudo npm install jsreport --production
 RUN sudo node node_modules/jsreport --init
 
-RUN sudo npm install jsreport-ejs --production --save --save-exact
-RUN sudo npm install jsreport-jade --production --save --save-exact
-RUN sudo npm install jsreport-freeze --production --save --save-exact
-RUN sudo npm install jsreport-phantom-image --production --save --save-exact
+RUN sudo npm install --production --save --save-exact jsreport-ejs jsreport-jade jsreport-freeze jsreport-phantom-image \
+    jsreport-html-to-text jsreport-mssql-store jsreport-postgres-store jsreport-mongodb-store jsreport-wkhtmltopdf \
+    jsreport-azure-storage electron jsreport-electron-pdf
 
-RUN sudo npm install jsreport-mssql-store --production --save --save-exact
-RUN sudo npm install jsreport-postgres-store --production --save --save-exact
-RUN sudo npm install jsreport-mongodb-store --production --save --save-exact
-
-RUN sudo wget http://download.gna.org/wkhtmltopdf/0.12/0.12.2.1/wkhtmltox-0.12.2.1_linux-jessie-amd64.deb
-RUN sudo dpkg -i wkhtmltox-0.12.2.1_linux-jessie-amd64.deb
-RUN sudo npm install jsreport-wkhtmltopdf --production --save --save-exact
-
-RUN sudo npm install electron-prebuilt@1.4.8 --production --save --save-exact
-RUN sudo npm install jsreport-electron-pdf --production --save --save-exact
-
+ADD run.sh /usr/src/app/run.sh
 COPY . /usr/src/app
 
 ENV NODE_ENV production
