--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 - '6'
 
 before_deploy: 
-  - "node_modules/jsreport --init"
+  - "node node_modules/jsreport --init"
   - "node_modules/.bin/jsreport-compile.cmd"
 
 addons:
