--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ language: node_js
 node_js:
 - '6'
 
-before_deploy: 
+before_deploy:
+  - "npm install -g npm-run" 
   - "node node_modules/jsreport --init"
-  - "node_modules/.bin/jsreport-compile"
+  - "npm-run jsreport-compile"
 
 addons:
   apt:
