--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,10 @@
 environment:		
   nodejs_version: "6"
 
+artifacts:
+  - path: jsreport.exe
+    name: jsreport.exe
+
 install:  
   - ps: Install-Product node $env:nodejs_version
   - node --version
