--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,7 +3,7 @@ environment:
 
 artifacts:
   - path: jsreport.exe
-    name: jsreport.exe
+    name: jsreport
 
 install:  
   - ps: Install-Product node $env:nodejs_version
@@ -25,7 +25,7 @@ deploy:
  provider: GitHub
  auth_token:
   secure: f5JMTlhWW7SKTeONrfO9hweB+AP2EY5VGAdzcM56VRNjIcY4zX7TiC7VWXrn5Dfj
- artifact: /.*\.exe/
+ artifact: jsreport
  draft: false
  prerelease: false
  force_update: true
