add remote desktop

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,6 +5,9 @@ artifacts:
   - path: jsreport.exe
     name: jsreport.exe
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))    
+
 install:  
   - ps: Install-Product node $env:nodejs_version
   - node --version
