try to deploy server.js

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,8 +2,7 @@ environment:
   nodejs_version: "6"
 
 artifacts:
-  - path: jsreport.exe
-    name: jsreport
+  - path: server.js  
 
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))  
@@ -32,7 +31,7 @@ deploy:
  provider: GitHub
  auth_token:
   secure: f5JMTlhWW7SKTeONrfO9hweB+AP2EY5VGAdzcM56VRNjIcY4zX7TiC7VWXrn5Dfj
- artifact: jsreport
+ artifact: /.*\.js/
  draft: false
  prerelease: false
  force_update: true
