--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,7 @@ environment:
   nodejs_version: "6"
 
 artifacts:
-  - path: server.js  
+  - path: jsreport.zip
 
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))  
@@ -25,13 +25,13 @@ test_script:
 
 before_deploy:  
   - "node_modules/.bin/jsreport-compile.cmd"
-  - "appveyor PushArtifact jsreport.exe"
+  - "7z a jsreport.zip jsreport.exe"
 
 deploy:  
  provider: GitHub
  auth_token:
   secure: f5JMTlhWW7SKTeONrfO9hweB+AP2EY5VGAdzcM56VRNjIcY4zX7TiC7VWXrn5Dfj
- artifact: /.*\.js/
+ artifact: /.*\.zip/
  draft: false
  prerelease: false
  force_update: true
