use github dependency for compile

--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "main": "index.js", 
   "dependencies": {
     "jsreport": "jsreport/jsreport",
-    "jsreport-compile": "*"
+    "jsreport-compile": "jsreport/jsreport-compile"
   }
 }
