--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pofider-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "test compile",
   "main": "index.js", 
   "dependencies": {
     "jsreport": "jsreport/jsreport",
