--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 matrix:
    include:
       - os: linux
-      - os: osx
-        on:
-          tags: true
+   exclude:
+      - os: osx        
 
 sudo: required
 language: node_js
