--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
     "compilerOptions": {
         "module": "commonjs",
         "lib": [
-            "esnext"
+            "es6"
         ],
-        "strictFunctionTypes": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
+        "strictFunctionTypes": true,
         "strictNullChecks": true,
         "baseUrl": "../",
         "typeRoots": [
@@ -18,6 +18,6 @@
     },
     "files": [
         "index.d.ts",
-        "jsreport-jsrender-tests.ts"
+        "jsreport-tests.ts"
     ]
 }
