--- a/.github/workflows/docker-build-windows.yaml
+++ b/.github/workflows/docker-build-windows.yaml
@@ -10,17 +10,14 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/checkout@v2     
+      - uses: actions/checkout@v2    
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build & push Docker image
         with:
+          image: pofider/test
+          tags: ${{ github.event.release.tag_name }}-windowsservercore, latest-windowsservercore
+          registry: https://hub.docker.com/
+          dockerfile: packages/jsreport/docker/windowsservercore/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push default
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          file: packages/jsreport/docker/windowsservercore/Dockerfile
-          tags: pofider/test:${{ github.event.release.tag_name }}-windowsservercore, pofider/test:latest-windowsservercore
+          password: ${{ secrets.DOCKER_PASSWORD }}     
