--- a/.github/workflows/docker-build-windows.yaml
+++ b/.github/workflows/docker-build-windows.yaml
@@ -16,7 +16,8 @@ jobs:
         name: Build & push Docker image
         with:
           image: pofider/test
-          tags: ${{ github.event.release.tag_name }}-windowsservercore, latest-windowsservercore         
+          tags: ${{ github.event.release.tag_name }}-windowsservercore, latest-windowsservercore
+          registry: docker.io
           dockerfile: packages/jsreport/docker/windowsservercore/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}     
