--- a/.github/workflows/docker-build-full.yaml
+++ b/.github/workflows/docker-build-full.yaml
@@ -30,4 +30,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           file: packages/jsreport/docker/full/Dockerfile
-          tags: jsreport/jsreport:${{ github.event.release.tag_name }}-full, jsreport/jsreport:latest-full
+          tags: pofider/test:${{ github.event.release.tag_name }}-full, pofider/test:latest-full
